# AdvOOPnew

./: .gitignore
Battleship/: Battleship.sln  CmakeLists.txt  README.txt
Battleship/Battleship/: AbstractPlayer.cpp  AbstractPlayer.h  Battleship.vcxproj  Battleship.vcxproj.filters  Board.h  Bonus.cpp  Bonus.h  DLLManager.cpp  DLLManager.h  DeterministPlayer.cpp  DeterministPlayer.h  FilePlayer.cpp  FilePlayer.h  GameManagerUtilities.cpp  GameManagerUtilities.h  GameUtilities.cpp  GameUtilities.h  Graphics.cpp  Graphics.h  MarkedShip.cpp  MarkedShip.h  Naive.sboard  NaivePlayer.cpp  NaivePlayer.h  Player.cpp  Player.h  Ship.cpp  Ship.h  SmartBoard.txt  SmartPlayer.cpp  SmartPlayer.h  WeightePosition.h  WeightedPosition.cpp  main.cpp  (+4 more)
ConsoleApplication1/: ConsoleApplication1.sln
hw3/: CMakeLists.txt  README.txt  hw3.sln
hw3/Battleship3D/: AbstractPlayer.cpp  AbstractPlayer.h  AlgorithmLoader.cpp  AlgorithmLoader.h  Battleship3D.vcxproj  Battleship3D.vcxproj.filters  BattleshipTournament.cpp  BattleshipTournament.h  BoardData.cpp  BoardData.h  CommonUtilities.cpp  CommonUtilities.h  CompetitionManager.cpp  CompetitionManager.h  Coordinate.cpp  Coordinate.h  DLLManager.cpp  DLLManager.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameManagerUtilities.cpp  GameManagerUtilities.h  GameMananger.cpp  GameMananger.h  GameResultsTable.cpp  GameResultsTable.h  GameRunner.cpp  GameRunner.h  GameUtilities.cpp  GameUtilities.h  IBattleshipGameAlgo.h  InitUtilities.cpp  InitUtilities.h  Logger.cpp  Logger.h  MyBoardData.cpp  MyBoardData.h  MyQueue.cpp  (+12 more)
hw3/Player/: CommonUtilities.cpp  CommonUtilities.h  MyBoardData.cpp  MyBoardData.h  Player.cpp  Player.h  Player.vcxproj  Player.vcxproj.filters  Ship.cpp  Ship.h  SmartPlayer.cpp  SmartPlayer.h
hw3/SmartPlayer/: CommonUtilities.h  MyBoardData.h  SmartPlayer.cpp  SmartPlayer.h  SmartPlayer.vcxproj  SmartPlayer.vcxproj.filters
hw4/: hw4.sln
(+50 files in other folders)
